# racing

./: README.md
zadanie_01/.metadata/: .log4j2.xml  version.ini
zadanie_01/.metadata/.plugins/org.eclipse.cdt.core/: racing_STM32F205RGT6.1710624405216.pdom  racing_STM32F205RGT6.language.settings.xml  racing_zadanie02.1710670772628.pdom  racing_zadanie02.language.settings.xml
zadanie_01/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
zadanie_01/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
zadanie_01/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
zadanie_01/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
zadanie_01/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
zadanie_01/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
zadanie_01/racing_zadanie02/: .cproject  .mxproject  .project  STM32F205RGTX_FLASH.ld  STM32F205RGTX_RAM.ld  racing_zadanie02.ioc
zadanie_01/racing_zadanie02/Core/Inc/: main.h  stm32f2xx_hal_conf.h
zadanie_01/racing_zadanie02/Core/Src/: main.c  stm32f2xx_hal_msp.c  stm32f2xx_it.c
zadanie_01/racing_zadanie02/Debug/: makefile  objects.list  racing_zadanie02.elf  racing_zadanie02.list  racing_zadanie02.map
zadanie_01/racing_zadanie02/Debug/Core/Src/: main.cyclo  main.su  stm32f2xx_hal_msp.cyclo  stm32f2xx_it.cyclo  system_stm32f2xx.cyclo
zadanie_01/racing_zadanie02/Debug/Core/Startup/: subdir.mk
zadanie_02/: CMakeLists.txt  file_reader.cpp  file_reader.h  issue_solver.cpp  issue_solver.h  main.cpp
(+16 files in other folders)
